<resources>
    <string name="app_name">Career Connect</string>
    <string name="skip">Skip</string>
    <string name="walk_through_screen_h1">Advanced Job Search</string>
    <string name="walk_through_screen_h2">Instant Communication</string>
    <string name="walk_through_screen_h3">Test Your Skills</string>
    <string name="walk_through_screen_h4">Save and Apply Later</string>
    <string name="walk_through_screen_d1">Easily search for jobs by location, skills, and more. Find the right job faster with our powerful filters.</string>
    <string name="walk_through_screen_d2">Connect with recruiters directly and communicate in real-time. Stay ahead with quick and easy communication.</string>
    <string name="walk_through_screen_d3">Take skill-based quizzes to stand out. Showcase your abilities and increase your chances of landing the right job.</string>
    <string name="walk_through_screen_d4">Save jobs you\'re interested in and apply when you\'re ready. Never miss an opportunity.</string>
    <string name="get_start"><![CDATA[Get Start ->]]></string>
    <string name="general_text">General Text</string>
    <string name="general_text_description">General Text description</string>
    <string name="intro_d">CareerConnect is designed to make your job search journey smooth and efficient. Whether you\'re a fresh graduate, experienced professional, or looking to switch careers, our app connects you with opportunities that match your skills and aspirations.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_to_continue">Sign Up to Continue</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_email_address">enter your email address</string>
    <string name="enter_your_password">enter your password</string>
    <string name="enter_your_mobile_number">enter your mobile number</string>
    <string name="choose_one_option">click to choose one option</string>
    <string name="textview">TextView</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="forgotten_password">forgotten password?</string>
    <string name="would_you_like_to_cancel">would you like to cancel</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="please_enter_6_digit_otp">Please enter 6 digit OTP</string>
    <string name="hii_user">Hii user....</string>
    <string name="job_posted">See all job posted</string>
    <string name="jobs">Jobs</string>
    <string name="post_new_job">Post new Job</string>
    <string name="search_jobs">Search Jobs</string>
    <string name="applied_jobs">Applied jobs</string>
    <string name="saved_jobs">Saved jobs</string>
    <string name="general">General</string>
    <string name="quizes">Quizes</string>
    <string name="profile">Profile</string>
    <string name="ask_gemini">Ask Gemini</string>
    <string name="logout">Logout</string>
    <string name="open_nav">open_nav\n</string>
    <string name="close_nav">close_nav</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="verify_account">Verify account</string>
    <string name="resend_otp">click here to resend OTP</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="get_reset_code">Get Reset Code</string>
    <string name="please_enter_6_digit_otp_and_new_password">Please enter 6 digit OTP and new password</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_name_of_the_company">enter name of the company</string>
    <string name="name_of_role">Name of role</string>
    <string name="name_of_company">Name of company</string>
    <string name="location">location</string>
    <string name="type_of_job">type of job</string>
    <string name="stipned">stipned</string>
    <string name="duration">duration</string>
    <string name="no_of_application">No of application</string>
    <string name="posted_job">Posted Job</string>
    <string name="preferred_job_type">Preferred Job Type</string>
    <string name="type_of_job_1">Type of Job</string>
    <string name="skills">Skills</string>
    <string name="company_names">Company Names</string>
    <string name="easy_apply">Easy apply</string>
    <string name="time">Time</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="filter">Filter</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="responsibilities_qualification"><![CDATA[Responsibilities && Qualification]]></string>
    <string name="name_of_company2">Name Of Company</string>
    <string name="about_role">About Role</string>
    <string name="skills_required">Skills Required</string>
    <string name="perks">Perks</string>
    <string name="choose_one_option_below">Choose One Option below</string>

    <string-array name="countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Congo (Democratic Republic of the)</item>
        <item>Costa Rica</item>
        <item>Côte d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea (North)</item>
        <item>Korea (South)</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string-array name="typeOfUser">
        <item>User</item>
        <item>Recruiter</item>
    </string-array>
    <string-array name="typeOfGender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

</resources>
