<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <LinearLayout
        android:background="@color/white"
        android:id="@+id/linearlayoutOption"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/preferedJobTypeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preferred_job_type"
            android:textColor="@color/black"
            android:background="@drawable/box_for_filters"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"/>
        <TextView
            android:id="@+id/typeOfJobTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_of_job_1"
            android:textColor="@color/black"
            android:background="@drawable/box_for_filters"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"/>
        <TextView
            android:id="@+id/locationTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/black"
            android:background="@drawable/box_for_filters"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"/>
        <TextView
            android:id="@+id/skillsTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skills"
            android:textColor="@color/black"
            android:background="@drawable/box_for_filters"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"/>
        <TextView
            android:id="@+id/companyNamesTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_names"
            android:textColor="@color/black"
            android:background="@drawable/box_for_filters"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"/>
        <TextView
            android:id="@+id/easyApplyTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy_apply"
            android:textColor="@color/black"
            android:background="@drawable/box_for_filters"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"/>
        <TextView
            android:id="@+id/timeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/black"
            android:background="@drawable/box_for_filters"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"/>
    </LinearLayout>
    <View
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/linearlayoutOption"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@color/dark_grey"/>
    <ImageView
        android:id="@+id/cancelBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/career_connect_white_bg"/>
    <GridView
        android:id="@+id/gridView"
        android:layout_marginBottom="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/applyFilter"
        app:layout_constraintLeft_toRightOf="@id/linearlayoutOption"/>
    <Button
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/applyFilter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_filter"/>
</androidx.constraintlayout.widget.ConstraintLayout>