<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:layout_margin="16dp"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="6dp"
                android:gravity="center|left"
                android:id="@+id/nameOfRole"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="@string/name_of_role"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/imageOfCompany"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/career_connect_white_bg"
                android:layout_gravity="right"/>
        </LinearLayout>
        <TextView
            android:layout_marginLeft="6dp"
            android:id="@+id/nameOfCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_company"
            android:textSize="16sp"/>
        <View
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"/>
        <LinearLayout
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/location_display_icon"
                android:layout_gravity="right"/>
            <TextView
                android:layout_marginLeft="2dp"
                android:gravity="center|left"
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/location"
                android:textSize="12sp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/job_display_icon"
                android:layout_gravity="right"/>
            <TextView
                android:layout_marginLeft="2dp"
                android:gravity="center|left"
                android:id="@+id/typeOfJob"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/type_of_job"
                android:textSize="12sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="4dp"
            android:layout_marginLeft="6dp"
            android:id="@+id/postedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posted_job"
            android:textSize="12sp"
            android:layout_weight="1"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
