<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/generalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_email"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="20dp"/>
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generalTV"
        android:id="@+id/editText1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/enter_your_email_address">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailETDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="16dp"
        android:id="@+id/sendOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_reset_code"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/main_colour_border_bg_btn_inside_white"
        app:layout_constraintTop_toBottomOf="@id/editText1"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <ProgressBar
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="2dp"
        android:id="@+id/progressBarDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_account"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="@drawable/main_colour_border_bg_btn_inside_white"
        app:layout_constraintTop_toBottomOf="@id/editText1"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <TextView
        android:clickable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sendOTP"/>
</androidx.constraintlayout.widget.ConstraintLayout>