<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <LinearLayout
        android:background="@color/white"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/career_connect_white_bg"/>
            <TextView
                android:layout_marginLeft="8dp"
                android:gravity="center|left"
                android:id="@+id/textViewExitDialog"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:textColor="@color/main_colour"
                android:text="@string/would_you_like_to_cancel"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:gravity="right"
                android:id="@+id/cancelBtnExitDialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="@color/main_colour"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="32dp"/>
            <TextView
                android:layout_weight="3"
                android:id="@+id/okBtnExitDialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textColor="@color/main_colour"
                android:text="@string/ok"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="8dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>